--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Tic tac Toe</title>
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <header>
@@ -31,6 +31,12 @@
                 <div id="btn9" class="button" hidden></div>
             </div>
             <h3 id="turnPlayer"></h3>
+            <div id="historyList" hidden>
+                <h3>History Player Win</h3>
+                <h4>Player X : <span id="playerX">0</span></h3>
+                <h4>Player O : <span id="playerO">0</span></h3>
+                <h4>Draw     : <span id="playerDraw">0</span></h3>
+            </div>
             <div class="container-btn">
                 <button id="btnReset" hidden>Reset</button>
             </div>
